Corrected layout issues for task form.

--- a/src/app/crm-app/crm-app.component.css
+++ b/src/app/crm-app/crm-app.component.css
@@ -46,6 +46,7 @@ button {
     width: 100%;
     height: 100%;
     top: 0;
+    z-index: 100;
 }
 
 .edit-form {
